# CrowN-bot

./: .gitignore  Cargo.toml  Justfile  TODO.md
migrations/: 20231210020251_create_tables.sql  20231212221502_create_guild_configuration.sql  20240108183637_creat_custom_image_table.sql  20240114200147_tables.sql
src/: config.rs  constants.rs  data.rs  framework.rs  handler.rs  main.rs  paginate.rs  utils.rs
src/commands/: mod.rs
src/commands/admin/: mod.rs  prefix.rs  roll_channel.rs
src/commands/custom_image/: image_create.rs  image_list.rs  mod.rs
src/commands/guild_config/: mod.rs
src/commands/mudae/: image_create.rs  image_delete.rs  image_list.rs  mod.rs  roll_channel.rs
src/db/: mod.rs
src/db/models/: account.rs  character.rs  guild_configuration.rs  mod.rs  roll.rs  serie.rs
src/db/repos/: guild_repo.rs  mod.rs
src/db/repositories/: account_repo.rs  character_repo.rs  guild_repo.rs  image_repo.rs  mod.rs  serie_repo.rs
src/events/: guild_create.rs  guild_delete.rs  message.rs  mod.rs  ready.rs
