[package]
name = "crown_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }

serenity = { version = "0.12.0", features = [
    "builder",
    "chrono",
    "collector",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "cache",
    "standard_framework",
    "utils",
    "rustls_backend",
] }
dotenv = "0.15.0"
anyhow = "1.0.75"
sqlx = { version = "0.7.3", features = [
    "sqlite",
    "runtime-tokio",
    "tls-rustls",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dashmap = "5.5.3"
